--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3427,3 +3427,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-11
+  taskId: 56652935
+  timeCreate: Tue Oct 31 12:56:02 2023
+  timeStart: Tue Oct 31 12:56:34 2023
+  timeFinish: Tue Oct 31 13:19:48 2023
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 23 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-19
+  taskId: 56655046
+  timeCreate: Tue Oct 31 14:00:24 2023
+  timeStart: Tue Oct 31 14:01:06 2023
+  timeFinish: Tue Oct 31 14:05:19 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
